# ChemSearch

./: .env.example  .gitignore  LICENSE  README.md  README.zh-CN.md  THIRD_PARTY_NOTICES.md  chemsearch  chemsearch.cmd  config.toml  paperscout  paperscout.cmd  paperverifier  paperverifier.cmd  pyproject.toml  server.sh
apps/web/: README.md  README.zh-CN.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json
research/benchmarks/: prepare_benchmarks.py
scripts/: install.ps1  install.sh
src/chemsearch/: __init__.py  branding.py  cli.py  config.py  devices.py  presentation.py  runtime.py  terminal_logging.py  workbench_retrieval.py  workbench_runtime.py
src/chemsearch/api/: app.py
src/chemverify/: cli.py
src/paper_search_agent/: __init__.py  cli.py  config.py  corpus_catalog.py  mineru_pipeline.py  models.py  search.py  terminal_logging.py  utils.py
src/paper_search_agent/api/: app.py  jobs.py  schemas.py
src/paper_search_agent/deep_chat/: __init__.py  generator.py  (+2 more)
src/paperscout/: __init__.py  acl_anthology.py  branding.py  cli.py  config.py  devices.py  index_progress.py  indexer.py  mineru_pipeline.py  runtime.py
tests/: test_api_runtime_reload.py  test_cli_publish.py  test_deep_chat_api.py  test_deep_chat_pipeline.py  test_mineru_pipeline.py  test_mineru_pipeline_cache_driver.py  test_offline_pipeline.py  test_paper_viewer_pdf_api.py  test_presentation.py  test_projects_api.py  test_runtime_device_selection.py  test_search_current.py  test_search_pipeline.py  test_workbench_retrieval.py  test_zotero_api.py  test_zotero_export.py
(+58 files in other folders)
